--- a/Resources-iPad/Resources/Interfaces/MainWindow-iPad.xib
+++ b/Resources-iPad/Resources/Interfaces/MainWindow-iPad.xib
@@ -10,9 +10,7 @@
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">117</string>
 		</object>
-		<array class="NSMutableArray" key="IBDocument.EditedObjectIDs">
-			<integer value="106"/>
-		</array>
+		<array class="NSMutableArray" key="IBDocument.EditedObjectIDs"/>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 		</array>
@@ -31,9 +29,9 @@
 			</object>
 			<object class="IBUIWindow" id="380026005">
 				<nil key="NSNextResponder"/>
-				<int key="NSvFlags">1316</int>
+				<int key="NSvFlags">1280</int>
 				<object class="NSPSMatrix" key="NSFrameMatrix"/>
-				<string key="NSFrameSize">{768, 1004}</string>
+				<string key="NSFrameSize">{768, 1024}</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
 					<bytes key="NSRGB">MSAxIDEAA</bytes>
@@ -63,7 +61,6 @@
 							<string key="NSResourceName">ekg.png</string>
 						</object>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-						<reference key="IBUITabBar"/>
 					</object>
 					<reference key="IBUIParentViewController" ref="1034742383"/>
 					<reference key="IBUISimulatedStatusBarMetrics" ref="692652796"/>
@@ -94,7 +91,6 @@
 							<string key="IBUITitle">Outages</string>
 							<array key="IBUIToolbarItems" id="0"/>
 							<object class="IBUINavigationItem" key="IBUINavigationItem" id="55478112">
-								<reference key="IBUINavigationBar"/>
 								<string key="IBUITitle">Outages</string>
 								<object class="IBUIBarButtonItem" key="IBUILeftBarButtonItem" id="272254443">
 									<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -126,7 +122,6 @@
 								<string key="NSResourceName">clock.png</string>
 							</object>
 							<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<reference key="IBUISimulatedStatusBarMetrics" ref="692652796"/>
@@ -180,7 +175,6 @@
 								<string key="NSResourceName">display.png</string>
 							</object>
 							<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<reference key="IBUISimulatedStatusBarMetrics" ref="692652796"/>
@@ -206,6 +200,12 @@
 							<object class="IBUIViewController" id="406352995">
 								<object class="IBUINavigationItem" key="IBUINavigationItem" id="457720909">
 									<string key="IBUITitle">Nodes</string>
+									<object class="IBUIBarButtonItem" key="IBUIRightBarButtonItem" id="964320401">
+										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+										<int key="IBUIStyle">1</int>
+										<reference key="IBUINavigationItem" ref="457720909"/>
+										<int key="IBUISystemItemIdentifier">4</int>
+									</object>
 									<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								</object>
 								<reference key="IBUIParentViewController" ref="567342637"/>
@@ -226,7 +226,6 @@
 								<string key="NSResourceName">o.png</string>
 							</object>
 							<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<reference key="IBUISimulatedStatusBarMetrics" ref="692652796"/>
@@ -385,6 +384,14 @@ b3JzdG9sL215c2V0dGluZ3MvLg</string>
 						<reference key="destination" ref="380026005"/>
 					</object>
 					<int key="connectionID">217</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">addInterface:</string>
+						<reference key="source" ref="964320401"/>
+						<reference key="destination" ref="406352995"/>
+					</object>
+					<int key="connectionID">219</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -547,6 +554,9 @@ b3JzdG9sL215c2V0dGluZ3MvLg</string>
 					<object class="IBObjectRecord">
 						<int key="objectID">193</int>
 						<reference key="object" ref="457720909"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="964320401"/>
+						</array>
 						<reference key="parent" ref="406352995"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -604,12 +614,17 @@ b3JzdG9sL215c2V0dGluZ3MvLg</string>
 						<reference key="object" ref="413154924"/>
 						<reference key="parent" ref="969988115"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">218</int>
+						<reference key="object" ref="964320401"/>
+						<reference key="parent" ref="457720909"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
 				<string key="-1.CustomClassName">UIApplication</string>
 				<string key="-2.CustomClassName">UIResponder</string>
-				<string key="106.IBEditorWindowLastContentRect">{{454, 91}, {768, 1024}}</string>
+				<string key="106.IBEditorWindowLastContentRect">{{426, 91}, {768, 1024}}</string>
 				<object class="NSMutableDictionary" key="106.IBLastUsedUIStatusBarStylesToTargetRuntimesMap">
 					<string key="NS.key.0">IBCocoaTouchFramework</string>
 					<integer value="0" key="NS.object.0"/>
@@ -666,6 +681,7 @@ b3JzdG9sL215c2V0dGluZ3MvLg</string>
 				<string key="213.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="216.IBEditorWindowLastContentRect">{{0, 778}, {320, 367}}</string>
 				<string key="216.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="218.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">OpenNMSAppDelegate</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
@@ -673,7 +689,7 @@ b3JzdG9sL215c2V0dGluZ3MvLg</string>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">217</int>
+			<int key="maxID">219</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -743,6 +759,17 @@ b3JzdG9sL215c2V0dGluZ3MvLg</string>
 				<object class="IBPartialClassDescription">
 					<string key="className">NodeListController</string>
 					<string key="superclassName">UITableViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">addInterface:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">addInterface:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">addInterface:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/Controllers/NodeListController.h</string>
