--- a/Resources-iPad/Resources/Interfaces/NodeListView.xib
+++ b/Resources-iPad/Resources/Interfaces/NodeListView.xib
@@ -193,6 +193,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">NodeListController</string>
 					<string key="superclassName">UITableViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">addInterface:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">addInterface:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">addInterface:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/Controllers/NodeListController.h</string>
