--- a/Resources-iPad/Resources/Interfaces/OutageView.xib
+++ b/Resources-iPad/Resources/Interfaces/OutageView.xib
@@ -52,8 +52,8 @@
 					</object>
 					<object class="IBUIActivityIndicatorView" id="627268025">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">-2147483356</int>
-						<string key="NSFrame">{{142, 187}, {37, 37}}</string>
+						<int key="NSvFlags">-2147483392</int>
+						<string key="NSFrame">{{365, 457}, {37, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -156,6 +156,7 @@
 						<int key="objectID">26</int>
 						<reference key="object" ref="627268025"/>
 						<reference key="parent" ref="191373211"/>
+						<string key="objectName">Large White Activity Indicator</string>
 					</object>
 				</array>
 			</object>
@@ -328,7 +329,7 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="511685909">
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="362415374">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">UIKit.framework/Headers/UIResponder.h</string>
 					</object>
@@ -344,7 +345,7 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">UIResponder</string>
 					<string key="superclassName">NSObject</string>
-					<reference key="sourceIdentifier" ref="511685909"/>
+					<reference key="sourceIdentifier" ref="362415374"/>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">UIScrollView</string>
